# coltess

./: .gitignore  README.md  pyproject.toml
coltess/: __init__.py  analysis.py  catalog.py  core.py  download.py  parallel.py  photometry.py  utils.py
docs/: conf.py  index.rst  requirements.txt
examples/: download_then_analyze.py  example1.py  lambda_tau_light_curve.py
